[ FIX ] -  Journal Editors Page Team Member Alignment Issues Fixes

--- a/wp-content/themes/twentyfourteen/css/style.css
+++ b/wp-content/themes/twentyfourteen/css/style.css
@@ -8064,8 +8064,9 @@ div.DTFC_LeftFootWrapper table {
   margin: auto;
   position: relative;
   overflow: hidden;
+  border: 1px solid #333;
 }
-/* line 182, sass/editor-board.scss */
+/* line 183, sass/editor-board.scss */
 .editors-civil .team-container figcaption {
   padding: 10px;
   text-align: left;
@@ -8075,31 +8076,33 @@ div.DTFC_LeftFootWrapper table {
   border: 1px solid #fff;
   border-top-color: transparent;
   margin: 0;
+  overflow: auto;
+  word-wrap: break-word;
 }
-/* line 192, sass/editor-board.scss */
+/* line 195, sass/editor-board.scss */
 .editors-civil .team-container figcaption h4 {
   font-size: 22px;
   font-weight: 700;
   padding-top: 20px;
 }
-/* line 197, sass/editor-board.scss */
+/* line 200, sass/editor-board.scss */
 .editors-civil .team-container .member-name {
   font-size: 1.5em;
   font-weight: 700;
   margin: 0;
 }
-/* line 202, sass/editor-board.scss */
+/* line 205, sass/editor-board.scss */
 .editors-civil .team-container figcaption p {
   font-size: 1.125em;
 }
-/* line 205, sass/editor-board.scss */
+/* line 208, sass/editor-board.scss */
 .editors-civil .team-container .social-buttons {
   display: inline-block;
   margin: auto;
   text-align: center;
   width: 100%;
 }
-/* line 212, sass/editor-board.scss */
+/* line 215, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container,
 .editors-civil .team-member .social-btn-container .social-btn-box {
   -webkit-transition: all .25s;
@@ -8108,69 +8111,69 @@ div.DTFC_LeftFootWrapper table {
   -o-transition: all .25s;
   transition: all .25s;
 }
-/* line 221, sass/editor-board.scss */
+/* line 224, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container {
   position: absolute;
   top: 0px;
   margin: 0 auto;
   left: 0;
 }
-/* line 227, sass/editor-board.scss */
+/* line 230, sass/editor-board.scss */
 .editors-civil .team-member:hover .social-btn-container {
   background: rgba(0, 0, 0, 0.5);
 }
-/* line 230, sass/editor-board.scss */
+/* line 233, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container .team-socail-btn {
   overflow: hidden;
   position: relative;
   width: 245px;
   height: 230px;
 }
-/* line 236, sass/editor-board.scss */
+/* line 239, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container .social-btn-box {
   position: absolute;
 }
-/* line 240, sass/editor-board.scss */
+/* line 243, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container .facebook-btn-container {
   bottom: 220px;
   right: 230px;
 }
-/* line 244, sass/editor-board.scss */
+/* line 247, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container .twitter-btn-container {
   bottom: 220px;
   left: 230px;
 }
-/* line 248, sass/editor-board.scss */
+/* line 251, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container .linkedin-btn-container {
   top: 220px;
   right: 230px;
 }
-/* line 252, sass/editor-board.scss */
+/* line 255, sass/editor-board.scss */
 .editors-civil .team-member .social-btn-container .github-btn-container {
   top: 220px;
   left: 230px;
 }
-/* line 257, sass/editor-board.scss */
+/* line 260, sass/editor-board.scss */
 .editors-civil .team-member:hover .social-btn-container .facebook-btn-container {
   bottom: 115px;
   right: 122px;
 }
-/* line 261, sass/editor-board.scss */
+/* line 264, sass/editor-board.scss */
 .editors-civil .team-member:hover .social-btn-container .twitter-btn-container {
   bottom: 115px;
   left: 122px;
 }
-/* line 265, sass/editor-board.scss */
+/* line 268, sass/editor-board.scss */
 .editors-civil .team-member:hover .social-btn-container .linkedin-btn-container {
   top: 115px;
   right: 122px;
 }
-/* line 269, sass/editor-board.scss */
+/* line 272, sass/editor-board.scss */
 .editors-civil .team-member:hover .social-btn-container .github-btn-container {
   top: 115px;
   left: 122px;
 }
-/* line 273, sass/editor-board.scss */
+/* line 276, sass/editor-board.scss */
 .editors-civil .team-container .social-buttons a {
   color: #fff;
   width: 24px;
@@ -8179,7 +8182,7 @@ div.DTFC_LeftFootWrapper table {
   font-size: 24px;
   text-align: center;
 }
-/* line 281, sass/editor-board.scss */
+/* line 284, sass/editor-board.scss */
 .editors-civil .team-container .team-member figure,
 .editors-civil .team-container .team-member figcaption,
 .editors-civil .team-container .team-member img,
@@ -8190,30 +8193,30 @@ div.DTFC_LeftFootWrapper table {
   -o-transition: all .25s;
   transition: all .25s;
 }
-/* line 292, sass/editor-board.scss */
+/* line 295, sass/editor-board.scss */
 .editors-civil .team-container .team-member:hover figure {
   background-color: #3498db;
   color: #fff;
 }
-/* line 296, sass/editor-board.scss */
+/* line 299, sass/editor-board.scss */
 .editors-civil .team-container .team-member:hover figcaption {
   border-color: #3498db;
   color: #fff;
 }
-/* line 301, sass/editor-board.scss */
+/* line 304, sass/editor-board.scss */
 .editors-civil .team-container .team-member:hover .social-buttons {
   top: 90px;
 }
 
 /* 2.2 - Social Button
 ------------------------------------------ */
-/* line 307, sass/editor-board.scss */
+/* line 310, sass/editor-board.scss */
 .social-btn-container {
   text-align: center;
   margin: 50px auto 0 auto;
 }
 
-/* line 311, sass/editor-board.scss */
+/* line 314, sass/editor-board.scss */
 .social-btn-container .social-btn-box {
   display: inline-block;
   width: 60px;
@@ -8234,7 +8237,7 @@ div.DTFC_LeftFootWrapper table {
   overflow: hidden;
 }
 
-/* line 334, sass/editor-board.scss */
+/* line 337, sass/editor-board.scss */
 .social-btn-container .social-btn-box a {
   color: #fff;
   font-size: 26px;
@@ -8252,7 +8255,7 @@ div.DTFC_LeftFootWrapper table {
   transform: rotate(-45deg);
 }
 
-/* line 351, sass/editor-board.scss */
+/* line 354, sass/editor-board.scss */
 .social-btn-box,
 .social-btn-box a {
   -webkit-transition: all .25s;
@@ -8262,48 +8265,48 @@ div.DTFC_LeftFootWrapper table {
   transition: all .25s;
 }
 
-/* line 360, sass/editor-board.scss */
+/* line 363, sass/editor-board.scss */
 .social-btn-box:hover {
   border-color: transparent;
 }
 
-/* line 363, sass/editor-board.scss */
+/* line 366, sass/editor-board.scss */
 .social-btn-box .facebook-btn:hover {
   background: #3B5998;
   color: #fff;
 }
 
-/* line 367, sass/editor-board.scss */
+/* line 370, sass/editor-board.scss */
 .social-btn-box .twitter-btn:hover {
   background: #55ACEE;
   color: #fff;
 }
 
-/* line 371, sass/editor-board.scss */
+/* line 374, sass/editor-board.scss */
 .social-btn-box .linkedin-btn:hover {
   background: #0077b5;
   color: #fff;
 }
 
-/* line 375, sass/editor-board.scss */
+/* line 378, sass/editor-board.scss */
 .social-btn-box .google-plus-btn:hover {
   background: #db514f;
   color: #fff;
 }
 
-/* line 379, sass/editor-board.scss */
+/* line 382, sass/editor-board.scss */
 .social-btn-box .youtube-btn:hover {
   background: #cc181e;
   color: #fff;
 }
 
-/* line 383, sass/editor-board.scss */
+/* line 386, sass/editor-board.scss */
 .social-btn-box .github-btn:hover {
   background: #2b2e30;
   color: #fff;
 }
 
-/* line 387, sass/editor-board.scss */
+/* line 390, sass/editor-board.scss */
 .social-btn-box .a:hover {
   background: #3498db;
   color: #fff;
